mlruns/0/8435070c99f94687833d8022cbf43cdc/params/pipeline.error

---------------------------------------------------------------------------
Exception encountered at "In [8]":
  Cell In[8], line 13
    f.write(f"<h2>{name}</h2>
            ^
SyntaxError: unterminated string literal (detected at line 13)

